--- a/index.html
+++ b/index.html
@@ -83,10 +83,17 @@
             left: 324px;
             width: 960px;
         }
+        
+        .silex-id-1514062355254-4 {
+            width: 50px;
+            min-height: 50px;
+            top: 1px;
+            left: 909px;
+        }
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"327px","left":"5px","min-width":"1200px"},"silex-id-1474394621032-2":{"min-height":"789px","background-color":"transparent","width":"1200px","top":"15px","left":"204px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"287px","background-color":"transparent","width":"800px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","min-width":"800px"},"silex-id-1478366450713-2":{"min-height":"123px","background-color":"transparent","top":"15px","left":"324px","width":"960px"},"silex-id-1478366450713-3":{"top":"1069px","left":"5px","background-color":"transparent","min-width":"960px"},"silex-id-1514060784972-1":{"width":"800px","min-height":"287px","top":"0px","left":"0px"},"silex-id-1514060906465-2":{"width":"1200px","min-height":"707px","top":"0px","left":"0px"},"silex-id-1514061253190-3":{"width":"1200px","min-height":"108px","top":"746px","left":"0px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"327px","left":"5px","min-width":"1200px"},"silex-id-1474394621032-2":{"min-height":"789px","background-color":"transparent","width":"1200px","top":"15px","left":"204px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"287px","background-color":"transparent","width":"800px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","min-width":"800px"},"silex-id-1478366450713-2":{"min-height":"123px","background-color":"transparent","top":"15px","left":"324px","width":"960px"},"silex-id-1478366450713-3":{"top":"1069px","left":"5px","background-color":"transparent","min-width":"960px"},"silex-id-1514060784972-1":{"width":"800px","min-height":"287px","top":"0px","left":"0px"},"silex-id-1514060906465-2":{"width":"1200px","min-height":"707px","top":"0px","left":"0px"},"silex-id-1514061253190-3":{"width":"1200px","min-height":"44px","top":"746px","left":"0px"},"silex-id-1514062355254-4":{"width":"50px","min-height":"50px","top":"1px","left":"909px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -151,6 +158,7 @@
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366450713-3 section-element" data-silex-id="silex-id-1478366450713-3" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366450713-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366450713-2">
 
+            <div data-silex-type="image" class="editable-style silex-id-1514062355254-4 image-element" data-silex-id="silex-id-1514062355254-4" style="" data-silex-href="https://www.instagram.com/otoxa_comic/"><img src="ig-logo.gif" class="silex-element-content"></div>
         </div>
     </div>
 
