--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             display: inherit;
         }
     </style>
+    <meta name="publicationPath" content="/api/1.0/github/exec/puttest">
     <!-- Silex HEAD tag do not remove -->
     <!-- End of Silex HEAD tag do not remove -->
 </head>
